--- a/index1.html
+++ b/index1.html
@@ -113,7 +113,7 @@
     </nav>
     <div class="form1">
         <h2> STUDENT LOGIN</h2>
-        <form name="myform" action="studentu&p.php" method="post" class="f1">
+        <form name="myform" action="studentu&p.php" method="POST" class="f1">
             <label for="name">UserName</label><br>
             <input type="text" id="name" name="name" placeholder="Enter Username" required><br>
             <label for="pass">Password</label><br>
